add query service or shard api
