# server/docs/swagger.json
@@ -6,7 +6,7 @@
     "paths": {
         "/sm/server/add-shard": {
             "post": {
-                "description": "增加shard",
+                "description": "add shard",
                 "consumes": [
                     "application/json"
                 ],
@@ -14,7 +14,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "shard管理"
+                    "shard"
                 ],
                 "parameters": [
                     {
@@ -36,7 +36,7 @@
         },
         "/sm/server/add-spec": {
             "post": {
-                "description": "增加spec",
+                "description": "add spec",
                 "consumes": [
                     "application/json"
                 ],
@@ -44,7 +44,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "spec管理"
+                    "spec"
                 ],
                 "parameters": [
                     {
@@ -66,7 +66,7 @@
         },
         "/sm/server/del-shard": {
             "post": {
-                "description": "删除shard",
+                "description": "del shard",
                 "consumes": [
                     "application/json"
                 ],
@@ -74,7 +74,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "shard管理"
+                    "shard"
                 ],
                 "parameters": [
                     {
@@ -96,7 +96,7 @@
         },
         "/sm/server/del-spec": {
             "get": {
-                "description": "删除spec",
+                "description": "del spec",
                 "consumes": [
                     "application/json"
                 ],
@@ -104,7 +104,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "spec管理"
+                    "spec"
                 ],
                 "parameters": [
                     {
@@ -114,6 +114,53 @@
                         "in": "query",
                         "required": true
                     }
+                ],
+                "responses": {
+                    "200": {
+                        "description": ""
+                    }
+                }
+            }
+        },
+        "/sm/server/get-shard": {
+            "get": {
+                "description": "get service all shard",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "shard"
+                ],
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "param",
+                        "name": "service",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": ""
+                    }
+                }
+            }
+        },
+        "/sm/server/get-spec": {
+            "get": {
+                "description": "get all service",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "spec"
                 ],
                 "responses": {
                     "200": {
