# server/smserver/server.go
@@ -199,8 +199,10 @@ func (s *Server) run() error {
 	routeAndHandler := make(map[string]func(c *gin.Context))
 	routeAndHandler["/sm/server/add-spec"] = apiSrv.GinAddSpec
 	routeAndHandler["/sm/server/del-spec"] = apiSrv.GinDelSpec
+	routeAndHandler["/sm/server/get-spec"] = apiSrv.GinGetSpec
 	routeAndHandler["/sm/server/add-shard"] = apiSrv.GinAddShard
 	routeAndHandler["/sm/server/del-shard"] = apiSrv.GinDelShard
+	routeAndHandler["/sm/server/get-shard"] = apiSrv.GinGetShard
 	routeAndHandler["/swagger/*any"] = ginSwagger.WrapHandler(swaggerfiles.Handler)
 	ss, err := apputil.NewShardServer(
 		apputil.ShardServerWithAddr(s.opts.addr),
